# erlang-slang

./: Emakefile  Makefile  README  TODO  include.mk  include.mk.in  slang.pub
c_src/: Makefile  slang_drv.c
config/: config.cache  config.status  configure  configure.in
debian/: README.Debian  changelog  control  copyright  dirs  docs  links  rules
demo/: Makefile  ex1.erl  ex2.c  ex2.erl  ex3.c  pager.erl
doc/: cref.txt  erlslang.txt
ebin/: slang.app
libslang/: COPYING  COPYRIGHT  INSTALL.unx  UPGRADE.txt  changes.txt  configure  slang.lis
libslang/autoconf/: Makefile.in  aclocal.m4  configure.in
libslang/demo/: Makefile.in  configure  configure.in  smgtest.c
libslang/doc/: README  grammar.txt  slangdoc.html
libslang/doc/text/: cref.txt  cslang.txt  slang.txt  slangfun.txt
libslang/doc/tm/: Makefile  copyright.tm  cref.tm  cslang.tm  fixtex.sl  preface.tm  regexp.tm  slang.tm  slangfun.tm
libslang/doc/tm/rtl/: array.tm  assoc.tm  bstr.tm  debug.tm  dir.tm  eval.tm  import.tm  info.tm  math.tm  message.tm  misc.tm  ospath.tm  posio.tm  posix.tm  stack.tm  stdio.tm  strops.tm  struct.tm  time.tm  type.tm  whatelse.sl
libslang/doc/tm/tools/: Makefile  tm2txt.c
libslang/examples/: assoc.sl  life.sl  prime.sl  saveobj.sl  sort.sl  utmp.sl
libslang/modules/: Makefile.in  README  pcre-module.c  select-module.c  smg-module.c  termios-module.c  varray-module.c
libslang/slsh/: INSTALL  Makefile.g32  Makefile.in  README  slsh.c
libslang/slsh/lib/: arrayfuns.sl  autoload.sl  require.sl  slsh.rc
libslang/src/: DESCRIP.MMS  Makefile.in  VMSMAKE.COM  _slang.h  calc.c  calc.sl  config.hin  keywhash.c  modules.unx  pcconf.c  slang.c  slarith.c  slarith.inc  slarray.c  slarrfun.c  slarrfun.inc  slarrmis.c  slassoc.c  slbstr.c  slclass.c  slcmd.c  slcmplex.c  slcompat.c  slconfig.h  slcurses.c  sldisply.c  sldostty.c  slerr.c  slerrno.c  slfile.c  slimport.c  slintall.c  slistruc.c  slkeymap.c  slkeypad.c  slmalloc.c  slmath.c  slmemchr.c  slmemcmp.c  slmemcpy.c  (+33 more)
libslang/src/mkfiles/: makefile.all
libslang/src/test/: Makefile  anytype.sl  arith.sl  array.sl  arrmult.sl  assoc.sl  bstring.sl  ifeval.sl  inc.sl  loops.sl  nspace.sl  nspace2.sl  ospath.sl  pack.sl  posixio.sl  prep.sl  selfload.sl  sltest.c  sscanf.sl  stdio.sl  strops.sl  struct.sl  syntax.sl  template.sl
libslang/src/util/: bcdump.c  keywords.lis  perfhash.c
src/: Makefile  slang.erl  slang_int.hrl
